# ai-news-aggregator

./: README.md  main.py  pyproject.toml  test_youtube_scraper.py
app/scrapers/: __init__.py  anthropic.py  forwardfuture.py  openai.py  youtube.py
app/services/: __init__.py  aggregator.py
config/: __init__.py  youtube_channels.py
