[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "python-dotenv>=1.0.0",
    "lxml>=5.0.0",
    "youtube-transcript-api>=0.6.0",
    "pydantic>=2.0.0",
    "playwright>=1.40.0",
    "docling>=2.67.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
